# DDI-FP-Graph

./: .gitignore  Dockerfile  README.md  main_FP.py  main_Graph.py  pair_icl_tpu.py  pyproject.toml  requirements.yml
GBDT/: __init__.py  config.py  models.py
GBDT/configs/: fingerprint.yaml
GBDT/sweeps/: fp_catboost_bayesian.yaml  fp_lightgbm_bayesian.yaml  fp_xgboost_bayesian.yaml
GPU/: SMILES.py  config.py  models.py  train.py  utils.py
GPU/sweeps/: fp_catboost_bayesian.yaml  fp_lightgbm_bayesian.yaml  fp_xgboost_bayesian.yaml  graph_bayesian.yaml
PyTorch/: __init__.py  config.py  fp_data.py  graph_data.py  models.py  train.py
PyTorch/configs/: graph.yaml
PyTorch/sweeps/: graph_bayesian.yaml  run_graph_sweep.py
TPU/: __init__.py  data_xla.py  models_tf.py  pairicl_xla.py  preprocess_to_npz.py  tabicl_xla.py  train_tf.py  train_tf_gnn.py  train_xla.py  tune_tf.py  tune_tf_gnn.py
data/: readme.md
src/: config.yaml  fp_data.py  graph_data.py  main.py  main_FP.py  main_FPGraph.py  main_FP_MLP.py  main_Graph.py  main_GraphAttn.py  main_SSI-DDI.py  models.py  ssiddi.py  sweep_FP_MLP.yaml  train_FP.py  train_FPGraph.py  transformer.py
src/.ipynb_checkpoints/: models-checkpoint.py  train-checkpoint.py
src/fp_preproc/: morgan.py  pharmacophores.py  topological.py
src/fp_preproc/.ipynb_checkpoints/: e3fp-checkpoint.py  morgan-checkpoint.py
tests/: test_fpmodel_fusion.py  test_gbdt_fusion.py
